@@ -59,9 +59,12 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Author of new MotionStreak code:
 		Much faster rendering. No need to use Ribbon
 
-* Mark Wei ( http://www.facebook.com/markwei ):
+* Mark Wei (http://www.facebook.com/markwei):
 	Added support for alignment in multiline in CCLabelBMFont objects
 	Author of alignment multiline test case
+
+* Nicky Weber (https://github.com/nickyEnjoysWoogoo):
+	Added ccDrawFilledPoly to DrawingPrimitives
 
 * Scott Lembcke (AKA slembcke) (http://chipmunk-physics.net/)
 	Mentor & contributor of new Physics + cocos2d integration via nodeToParentTransform
