@@ -9,6 +9,7 @@ version 2.0-rc0 XX-Feb-2012
 . [NEW] Animation: Added new animation format that supports delays per frame and notifications per frame
 . [NEW] Director: When the stats are on, the number of GL draw calls per frame are displayed
 		Added support for main-thread director (Mac only. Needed for some editors)
+. [NEW] DrawingPrimitives: Added ccDrawPoly() free function
 . [NEW] LabelTTF: fontName and fontSize are properties
 . [NEW] LabelBMFont: added setFntFile method
 . [NEW] Menu: could be created/initialized using NSArray
